# CPP-HTTP

./: CMakeLists.txt  README.md  main.cpp
httpserver/: Environment.cpp  HTTPServer.cpp  HTTPServer.h  HTTPServerConfig.h
httpserver/defaults/html/: example.h  example.html
httpserver/http/: HTTP.cpp  HTTPRequestHandler.cpp  HTTPRequestHandler.h  HTTPResult.cpp  HTTPResult.h
httpserver/http/handlers/: DeleteHandler.h  GetHandler.h
logger/: LogLevel.h
server/: Environment.h  HTTPServerConfig.cpp
server/http/: HTTPRequest.h  HTTPResult.cpp  HTTPResult.h
server/util/: UtilString.cpp  UtilString.h
src/: main.cpp
src/logger/: Log.cpp  Log.h
src/server/: Environment.cpp  Environment.h  Server.cpp  Server.h  ServerConfig.cpp  ServerConfig.h
src/server/defaults/resources/: config.h  config.json
src/server/http/: HTTP.cpp  HTTP.h  HTTPRequest.cpp  HTTPRequestHandler.cpp  HTTPRequestHandler.h  HTTPResult.cpp  HTTPResult.h
src/server/http/handlers/: GetHandler.h  Handler.h  PostHandler.h  PutHandler.h
